--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "docker_web_app",
   "version": "1.0.0",
   "description": "Node.js on k8s cluster",
-  "author": "Basi Reddy"
+  "author": "Basi Reddy",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
