--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docker_web_app",
+  "name": "helloworld",
   "version": "1.0.0",
   "description": "Node.js on k8s cluster",
   "author": "Basi Reddy",
