--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "nodejs",
+  "name": "nodejsapp",
   "version": "1.0.0",
-  "description": "Node.js on k8s cluster",
-  "author": "Basi Reddy",
+  "description": "",
   "main": "server.js",
+  "dependencies": {},
+  "devDependencies": {},
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.16.1"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/basireddym/cicd.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/basireddym/cicd/issues"
+  },
+  "homepage": "https://github.com/basireddym/cicd#readme"
 }
