--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "nodejsapp",
-  "version": "1.0.0",
-  "description": "",
+  "name": "webapp",
+  "version": "1.0.1",
+  "description": "my application",
   "main": "server.js",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
