--- a/nodejs-service.yml
+++ b/nodejs-service.yml
@@ -4,11 +4,9 @@ apiVersion: v1
 metadata:
   name: nodewebappservice
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: nodewebapp
   ports:
-    - name: http
-      protocol: TCP
-      port: 3000
+    - port: 8080
       targetPort: 8080
